// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Auth contract snapshots GET /health reporta dependencias principales: GET /health 200 1`] = `
{
  "body": {
    "db": true,
    "latency_ms": "<latency_ms>",
    "redis": false,
    "status": "degraded",
    "uptime_s": "<uptime_s>",
  },
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "x-request-id": "<x-request-id>",
  },
  "status": 200,
}
`;

exports[`Auth contract snapshots POST /login devuelve tokens en formato esperado: POST /login 200 1`] = `
{
  "body": {
    "access_token": "<access_token>",
    "expires_in": "<expires_in>",
    "message": "Login exitoso",
    "refresh_token": "<refresh_token>",
    "roles": [
      "user",
    ],
    "token_type": "Bearer",
  },
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "x-request-id": "<x-request-id>",
  },
  "status": 200,
}
`;

exports[`Auth contract snapshots POST /refresh-token rota el refresh token sin romper contrato: POST /refresh-token 200 1`] = `
{
  "body": {
    "access_token": "<access_token>",
    "expires_in": "<expires_in>",
    "refresh_token": "<refresh_token>",
    "token_type": "Bearer",
  },
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "x-request-id": "<x-request-id>",
  },
  "status": 200,
}
`;

exports[`Auth contract snapshots POST /register devuelve contrato estable: POST /register 201 1`] = `
{
  "body": {
    "message": "Usuario registrado",
    "user": {
      "email": "<jwt>",
      "id": "<id>",
      "name": "Register User",
      "permissions": [],
      "roles": [
        "user",
      ],
      "status": "active",
    },
  },
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "x-request-id": "<x-request-id>",
  },
  "status": 201,
}
`;
